git check port
