# src/server/routes/server.routes.ts
@@ -2,15 +2,23 @@ import { Router } from 'express'
 import { deserializeUser, validateResource } from '../../middlewares'
 import { adminAuthorize } from '../../middlewares/admin-authorize'
 import {
+  createdServerHandler,
   createServerHandler,
   findAllServerHandler,
   findByIdHandler,
 } from '../controller'
-import { CreateServerSchema } from '../schemas'
+import { CreatedServerSchema, CreateServerSchema } from '../schemas'
 
 export const serverRoutes = () => {
   const router = Router()
 
+  router.post(
+    '/create',
+    validateResource(CreatedServerSchema),
+    deserializeUser,
+    adminAuthorize,
+    createdServerHandler,
+  )
   router.post(
     '/',
     validateResource(CreateServerSchema),
